# openskills

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  LICENSE.zh.md  README.md  README.zh.md
.cursor/rules/: git-submodules.md
.cursor/skills/: README.md  TEST-RESULTS.md  test-prompts.md
.cursor/subagents/: README.md  bindings-compatibility-agent.md  examples-e2e-agent.md  release-gatekeeper-agent.md  runtime-sandbox-auditor.md  skill-spec-conformance-agent.md  wasm-plugin-build-specialist.md
.github/workflows/: publish-python.yml  publish-ts.yml
bindings/python/: Cargo.toml  README.md  openskills_tools.py  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/tests/: test_runtime.py
bindings/ts/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  tools.d.ts  tools.js
bindings/ts/scripts/: postbuild.js
bindings/ts/src/: lib.rs
bindings/ts/test/: index.test.js
docs/: README.md  README.zh.md  architecture-comparison.md  architecture-comparison.zh.md  architecture.md  architecture.zh.md  claude-skills-comparison.md  claude-skills-comparison.zh.md  contributing.md  contributing.zh.md  developers.md  developers.zh.md  security.md  security.zh.md  skill-flow.md  skill-flow.zh.md  spec-verification.md  spec-verification.zh.md  spec.md  spec.zh.md  vercel-agent-skill-walkthrough.md
examples/agents/: GUIDE.md  GUIDE.zh.md  QUICKSTART.md  QUICKSTART.zh.md  README.md  README.zh.md
examples/agents/langchain-js/: README-WEB.md  README.md  SKILL-TYPE-HANDLING.md  package-lock.json  package.json
examples/agents/langchain-js/src/: advanced-agent-alibaba.ts  index-alibaba.ts  index.ts  openskills-tool.ts  shims.d.ts
examples/agents/langchain-js/web/: server.ts
examples/agents/langchain-js/web/public/: app.js  index.html
examples/agents/langchain-python/: README.md  main.py
examples/agents/mastra/: README.md  package.json
examples/agents/mastra/src/: index.ts
examples/agents/simple/: .env.example  README.md  package-lock.json  package.json  test-api.ts
examples/agents/simple/src/: index.ts
examples/agents/with_langchain-js/: README.md
examples/agents/with_langchain-js/src/: advanced-agent.ts  openskills-tool.ts  shims.d.ts
examples/agents/with_langchain-python/: README.md  requirements.txt
examples/agents/with_vercel-ai-sdk/: .gitignore  README.md  TESTING.md  package-lock.json  package.json
examples/agents/with_vercel-ai-sdk/src/: index.ts
examples/skills/example-skill/: SKILL.md
examples/skills/example-skill/wasm/: README.md  skill.wasm
examples/skills/skill-creator/: README.md  SKILL.md
examples/skills/skill-creator/src/: index.ts  init_skill.ts  package_skill.ts  validate_skill.ts
examples/skills/skill-creator/wasm/: README.md  skill.wasm
examples/skills/test-wasm-skill/: README.md
examples/skills/test-wasm-skill/src/: index.ts
examples/skills/test-wasm-skill/wasm/: skill.wasm
runtime/: BUILD.md  BUILD.zh.md  Cargo.toml  libtest_api.rlib
runtime/src/: actions.rs  audit.rs  build.rs  context.rs  deps_check.rs  errors.rs  executor.rs  hook_runner.rs  host_policy.rs  lib.rs  manifest.rs  native_runner.rs  permission_callback.rs  permissions.rs  registry.rs  sandbox_mode.rs  skill_parser.rs  skill_session.rs  validator.rs  wasm_runner.rs
runtime/tests/: always_loaded_tests.rs  claude_official_skills_tests.rs  compatibility_tests.rs  deps_check_tests.rs  edge_case_tests.rs  error_handling_tests.rs  file_io_tests.rs  hook_tests.rs  host_policy_tests.rs  integration_tests.rs  linux_sandbox_tests.rs  permission_tests.rs  registry_tests.rs  resource_tests.rs  sandbox_command_tests.rs  seatbelt_tests.rs  skill_session_tests.rs  spec_conformance_tests.rs  system_prompt_tests.rs  target_execution_tests.rs  wasm_tests.rs
scripts/: build_all.sh  build_bindings.sh  build_javy_plugin.sh  build_python.sh  build_runtime.sh  build_ts.sh  setup_build_tools.sh  test_all.sh  test_quick.sh
