[package]
name = "openskills-runtime"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Claude Skills compatible runtime with WASM sandbox"
repository = "https://github.com/finogeeks/openskills"
keywords = ["claude", "skills", "wasm", "sandbox", "agent"]
categories = ["development-tools", "wasm"]

[lib]
crate-type = ["rlib"]

[[bin]]
name = "openskills"
path = "src/bin/openskills-runtime.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"

# Hashing for audit
sha2 = "0.10"
hex = "0.4"

# Filesystem traversal
walkdir = "2.4"
dirs = "5.0"

# Pattern matching for hook matchers
glob = "0.3"

# URL parsing for network permissions
url = "2.5"

# Random number generation for secure temp file names
rand = "0.8"

# Secure temporary file creation
tempfile = "3.10"

# Linux sandboxing (Landlock + seccomp)
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
# seccompiler is the high-level Firecracker/AWS seccomp library
seccompiler = "0.4"
# nix provides low-level Unix/Linux APIs (prctl, clone, namespaces)
nix = { version = "0.29", features = ["process", "signal", "fs", "user"] }
# libc for raw syscall numbers and constants
libc = "0.2"

# WASM runtime
# Using latest wasmtime (40+) for WASI 0.3.0 preview support
# WASI 0.3.0 final release expected February 2026
# Using workspace dependency to ensure version consistency
wasmtime = { workspace = true }
# IMPORTANT: OpenSkills runtime is WASI 0.3 (WASIp3) / component-model-only.
# We explicitly disable wasmtime-wasi default features to avoid relying on legacy WASI "preview" APIs.
wasmtime-wasi = { workspace = true }
cap-std = "2.0"
tokio = { version = "1", features = ["io-util", "rt-multi-thread"] }

# JavaScript to WASM compilation (plugin-based)
# Only include when building the binary (build tool), not when building as a library
# This prevents wasmtime version conflicts when building Python/TS bindings
javy-codegen = { version = "3.0", optional = true }

[features]
default = ["build-tool", "plugin-javy"]
# Enable build tooling (compiler plugins).
# Python/TS bindings disable this via default-features = false to avoid wasmtime conflicts.
build-tool = []
# Built-in compiler plugins
plugin-javy = ["javy-codegen"]
plugin-quickjs = []
plugin-assemblyscript = []

[dev-dependencies]
tempfile = "3.10"
