[package]
name = "openskills_python"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "OpenSkill Runtime Python bindings (PyO3)"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde_json = "1.0"
openskills-runtime = { path = "../../runtime" }
