[package]
name = "openskills_python"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "OpenSkill Runtime Python bindings (PyO3)"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
serde_json = "1.0"
# Disable build-tool feature to avoid wasmtime version conflicts
# The build-tool feature includes javy-codegen which depends on wasmtime v36
# We only need the runtime functionality, not the build tool
openskills-runtime = { path = "../../runtime", default-features = false }
